--- a/css/style_layout_editor.css
+++ b/css/style_layout_editor.css
@@ -163,3 +163,15 @@
     justify-content: center;
     text-align: center;
 }
+
+.layout_controls > .div_name_info {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    flex-direction: column;
+}
+.div_name_info > p {
+    display: flex;
+    flex: 1;
+    text-align: center;
+}
